--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
+    "@nuxtjs/i18n": "^8.3.0",
     "@nuxtjs/robots": "^3.0.0",
     "nuxt": "^3.11.2",
     "vue": "^3.4.21",
